adjusted css to improve the fixed-nav overlapping content on small screens

--- a/style.css
+++ b/style.css
@@ -9,7 +9,9 @@
    overflow-y: scroll;
 }
 
-
+.jumbotron {
+    margin-top:40px;
+}
 
 
 #m {
